--- a/linhdtt/js/equationapp/index.html
+++ b/linhdtt/js/equationapp/index.html
@@ -11,8 +11,8 @@
     <p> This application will help you with solving tricky equations!!!</br>
         First, what kind of equation do you want to get root(s)? </p>
     <br></br>
-    <a href="equation1.php"><button class="btn" type="button">Linear</button></a>
-    <a href="equation2.php"><button class="btn" type="button">Quadratic</button></a>
+    <a href="equation1.html"><button class="btn" type="button">Linear</button></a>
+    <a href="equation2.html"><button class="btn" type="button">Quadratic</button></a>
     </div>
     <div class="footer">
     <p align="center" >Copyright ©2018 by @linhanh512 </p>
