--- a/linhdtt/js/equationapp/equation1.html
+++ b/linhdtt/js/equationapp/equation1.html
@@ -1,35 +1,3 @@
-<script>
-    function validate(param){
-        var param,message;
-        param = document.getElementsByTagName("input");
-        if(isNaN(param) && param != ""){
-            message="Invalid input";
-            windows.alert(message);
-            return false;
-        }else{
-            return true;
-        }
-    }
-
-    //Calculation goes here
-    var a,b,x;
-    a = document.getElementById("a");
-    b = document.getElementById("b");
-
-    if(validate(a) && validate(b)){
-        if(a==0){
-            if(b==0){
-                message="The equation has many roots";
-            }else{
-                message="The equation has no root";
-            }
-        }else{
-            x = -b/a;
-            message="The equation has one root which is"+x;
-        }
-        windows.alert(message);
-    }
-</script>
 <!DOCTYPE html>
 <html>
 <head>
@@ -38,16 +6,44 @@
 	<link rel="stylesheet" type="text/css" href="theme.css">
 </head>
 <body>
-    <form name="eq1" action="" method="GET" onsubmit="return validate()">
+    <form name="eq1" action="" onsubmit="return (validate(a) && validate(b))" method="POST">
     	<h3>Enter the values of a and b in the equation ax+b=0?</h3>
 		<div align= "center">
 			<input class="const" type="number" name="a" id="a" required> x+
 			<input class="const" type="number" name="b" id="b" required> =0
 			<br></br>
-			<br><button class="btn" type="submit" name="btn_submit" onClick="return validate()">Solve it!</button></br>
+			<br><button class="btn" type="submit" name="btn_submit" onClick="return (validate(a) && validate(b))">Solve it!</button></br>
         </div>
+        <script>
+            function validate(param){
+                if(!isNaN(param) && param != ""){
+                    return true;
+                }else{
+                    return false;
+                }
+            }
+        
+            //Calculation goes here
+            var a,b,x;
+            a = document.getElementById("a").value;
+            b = document.getElementById("b").value;
+        
+            if(validate(a) && validate(b)){
+                if(a==0){
+                    if(b==0){
+                        message="The equation has many roots";
+                    }else{
+                        message="The equation has no root";
+                    }
+                }else{
+                    x = -b/a;
+                    message="The equation has one root which is"+x;
+                }
+                alert(message);
+            }
+        </script>
+        <a href="index.html">Back to homepage!</a>
     </form>
-	<a href="index.html">Back to homepage!</a>
 <div class="footer">
     <p align="center" >Copyright ©2018 by @linhanh512 </p>
 </body>
