--- a/linhdtt/js/equationapp/equation2.html
+++ b/linhdtt/js/equationapp/equation2.html
@@ -43,14 +43,14 @@
 			            var delta = b * b - 4 * a * c;
 			            if (delta == 0){
 				            x = -b / (2*a);
-				            message = "The equation has one root which is".x;
+				            message = "The equation has one root which is "+x;
 			            }
 			            if (delta < 0){
 				            message = "The equation has no root";
 			            }   
 			            if (delta > 0){
-				            x1 = (-b+sqrt(delta))/(2*a);
-				            x2 = (-b-sqrt(delta))/(2*a);
+				            x1 = (-b+Math.sqrt(delta))/(2*a);
+				            x2 = (-b-Math.sqrt(delta))/(2*a);
 				            message = "The equation has two roots "+x1+" and "+x2;
                         }
 		            }
